# twom_vita

./: CMakeLists.txt  README.md
gamefiles/: settings.cfg
gamefiles/Common/Shaders/: blurcomposition.fsh  blurcomposition.vsh  font.fsh  font.vsh  gaussblur.fsh  gaussblur.vsh  glowsource.fsh  glowsource.vsh  graph.fsh  graph.vsh  light.fsh  light.vsh  meshoutlines.fsh  meshoutlines.vsh  mobileitdroundprogress.fsh  mobileitdroundprogress.vsh  mobilemeshsolid.fsh  mobilemeshsolid.vsh  mobilemeshtranslucent.fsh  mobilemeshtranslucent.vsh  mobilepostprocesskosovo.fsh  mobilepostprocesskosovo.vsh  mobilepostprocessoutlines.fsh  mobilepostprocessoutlines.vsh  particle.fsh  particle.vsh  postfseupscale.fsh  postfseupscale.vsh  sfxquad.fsh  sfxquad.vsh  simpleshader.fsh  simpleshader.vsh  ui.fsh  ui.vsh  video.fsh  video.vsh
livearea/: template.xml
loader/: config.h  dialog.c  main.c  main.h
